r63 - june, 2, 2009
    * Membre : actions > executeAcl() has been cleaned
    * Membre : showSuccess.php > Domtab is also used to display user information
      in several tabs


r62 - june, 2, 2009
    * settings.yml : secure_module and secure_action have been customized to
      redirect user to a custom page if he doesn't have required credentials
    * Membre : action > processForm > we give all the credentials to the first
      user
    * web/js/domtab/domtab.js : new file, Domtab library to generate HTML tabs
    * web/css/domtab.css : associated stylesheet
    * Membre : actions > edit action directly embeds AclForm
    

r61 - june, 2, 2009
    * AclCredentialPeer : doSelectForMembreId() method
    * Membre.php : resetAcl() method and addCredential($code) method
    * AclCredentialPeer : doDeleteForMembreId() method
    * schema.yml : acl_credential got a new "acl_action_id" field
    * symfony propel:build-model
    * Membre : new template aclError.php which is displayed if no Member is
      specified for edit
    * AclActionPeer : retrieveByCode($code) method
    * AclCredential : getCode() method
    * AclCredentialForm.class.php : new automaticCheck() method
    * no_mail.png image
    * Membre : index > icon 'no_mail' is displayed without link if user has no
      email address
    * security.yml files have been added in each module
    * myUser.class.php : setCredentials() method
    

r60 - june, 1, 2009
    * Association : mailing > error is displayed if the user doesn't have the
      smtp module
    * MembrePeer : doSelectWithEmailForAssociation() > fixed issue with
      Criteria::ISNOTNULL
    * schema.yml : model is up to date to manage credentials
    * symfony propel:build-model
    * fixtures.yml : filled with ACL modules and actions
    * AclActionPeer : doSelectForModuleId() new method
    * AclCredentialForm : new class
    * Membre : aclSuccess.php > new file
    * Membre : new action "acl"
    

r59 - june, 1, 2009